--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/lato": "^5.2.5",
+    "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/noto-sans": "^5.2.7",
+    "@fontsource/open-sans": "^5.2.5",
+    "@fontsource/pt-sans": "^5.2.5",
+    "@fontsource/roboto": "^5.2.5",
     "@tailwindcss/vite": "^4.0.17",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
