--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.12.2",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
