--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/lato": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
     "@fontsource/noto-sans": "^5.2.7",
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/pt-sans": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.4.0",
     "@tailwindcss/vite": "^4.0.17",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
