--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.12.2",
+    "i18next": "^25.2.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.30.0",
